--- a/CSS/devildrey33.css
+++ b/CSS/devildrey33.css
@@ -19,13 +19,32 @@ body {
     flex:1 1 auto;
     padding:1em;
     margin:0.5em;
+    filter:grayscale(80%);
+    transition:0.4s ease-out;
 }
+
+/* Vista vertical (portrait / vertical) para la gran mayoria de moviles Y tablets  */                             
+@media (orientation:portrait) {
+    #Cuerpo {
+        flex-direction:column;
+    }
+}
+/*
+@media (orientation:landscape) {
+    #Cuerpo {
+        flex-direction:row;
+    }
+}*/
 
 #Cuerpo > .Entrada > img  {
     display:table;
     margin:auto;
     width:100%;
     height: 100%;
+}
+
+#Cuerpo > .Entrada:hover {
+    filter:grayscale(0%);
 }
 
 /* Marcas */
