--- a/CSS/devildrey33.css
+++ b/CSS/devildrey33.css
@@ -36,6 +36,19 @@ body {
     margin:0;
 }
 
+body::after {
+    content:'';
+    position:fixed;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    background-color:rgb(41, 39, 44);
+    z-index:1;
+    opacity:0;
+    transition: 0.4s ease-out;
+}
+
 body[cargando="true"]::after {
     content:'';
     position:fixed;
@@ -61,6 +74,7 @@ h1, h2, h3, h4, h5 { font-family : 'Karla', sans-serif; }
     transition:0.4s;
     opacity:0.0;
     margin-left:3.6rem;
+    z-index:2;
 }
 
 #Cuerpo[visible="true"] {
@@ -73,9 +87,8 @@ h1, h2, h3, h4, h5 { font-family : 'Karla', sans-serif; }
     padding:0 1rem;
     /*margin:0.5rem;    */
     overflow: hidden;
+    z-index:3;
 }
-
-
 
 
 /* Vista vertical (portrait / vertical) para la gran mayoria de moviles Y tablets  */                             
@@ -130,7 +143,7 @@ h1, h2, h3, h4, h5 { font-family : 'Karla', sans-serif; }
     display:inline-table;
     height:200px;
     width:calc((100% - 4rem) - 300px);
-    padding:2rem;
+    padding:2rem 0.1rem;
     transition:0.4s ease-in-out;
     color:#FFFFFF;
 }
@@ -291,9 +304,9 @@ body #devildrey33_Logo {
     font-family: 'Orbitron', sans-serif;
     font-size:1.2rem;
     position:fixed;
-    bottom:5.5rem;
+    bottom:7.5rem;
     left:-3.8rem;
-    transition:0.4s ease-in-out;
+/*    transition:bottom 0.4s ease-in-out, left 0.4s ease-in-out, transform 0.4s ease-in-out, font-size 0.4s ease-in-out;*/
     transform:rotateZ(-90deg);
     z-index:200;
     font-size:1.2rem;
@@ -309,33 +322,24 @@ body #devildrey33_Logo {
 
 body[cargando="true"] #devildrey33_Logo {
     transform:rotateZ(0deg);
-    bottom:calc(50% - 2rem); 
-    left:calc(50% - 50rem); 
+    bottom:calc(50vh - 2rem); 
+    left:calc(50vw - 40vw); 
     font-size:2.4rem;
-    width:100rem;
+    width:80vw;
 }
-
 
 
 body[cargando="true"] #devildrey33_Logo > div {
-    animation:Ani_LogoCargando 7s ease-in-out 0s infinite;    
+    animation:Ani_LogoCargando 6s ease-in-out 0s infinite;    
 }
 
-
-/*
-@keyframes Ani_LogoCargando2 {
-    0%   { top:0rem; }
-    30%  { top:-0.6rem; }
-    60%  { top:0rem; }
+/* 2% del alto para el tamaño de fuente */
+/*@media screen and (orientation: portrait)  {
+    body[cargando="true"] #devildrey33_Logo > div {
+        animation:Ani_LogoCargandoPortrait 6s ease-in-out 0s infinite;    
+    }
 }
-
-
-@keyframes Ani_LogoCargando {
-    0%   { padding-left:0.6rem; }
-    50%  { padding-left:0rem; }
-    100% { padding-left:0.6rem; }
-}*/
-
+*/
 body #devildrey33_Logo > div {
     position:relative;
     display:inline-block;
@@ -360,28 +364,32 @@ body #devildrey33_Logo > div:nth-child(7)  {    animation-delay: 1.4s;     }
 body #devildrey33_Logo > div:nth-child(8)  {    animation-delay: 1.6s;     }
 body #devildrey33_Logo > div:nth-child(9)  {    animation-delay: 1.8s;     }
 body #devildrey33_Logo > div:nth-child(10) {    animation-delay: 2.0s;     }
-body #devildrey33_Logo > div:nth-child(11) {    animation-delay: 2.2s;     color:rgb(234, 80, 78);     }
-body #devildrey33_Logo > div:nth-child(12) {    animation-delay: 2.4s;     color:rgb(234, 80, 78);     }
+body #devildrey33_Logo > div:nth-child(11) {    animation-delay: 2.0s;     color:rgb(234, 80, 78);     }
+body #devildrey33_Logo > div:nth-child(12) {    animation-delay: 2.2s;     color:rgb(234, 80, 78);     }
 
 @keyframes Ani_LogoCargando {
     0% {
-        right:-100%;
+        top:-20vh;
+        left:100%;
         opacity:0;
         transform:rotate(90deg);
     }
-    20% {
-        right:-59%; 
+    25% {
+        top:-1vh;
+        transform:rotate(0deg);
+        left:calc(50% - 10rem);
+        opacity:1;
+    }
+    60% {
+        left:calc(50% - 8.9rem);
         transform:rotate(0deg);
         opacity:1;
+        top:0vh;
     }
-    50% {
-        right:-41%; 
-        transform:rotate(0deg); 
-        opacity:1;
-    }
-    80% {
-        right:0; 
-        transform:rotate(-180deg);
+    75% {
+        top:40vh;
+        left:0;
+        transform:rotate(-130deg);
         opacity:0;
     }
 }
