--- a/CSS/devildrey33.css
+++ b/CSS/devildrey33.css
@@ -11,6 +11,9 @@
 /* Fuente para las etiquetas h1, h2, h3, h4, h5*/
 @import url('https://fonts.googleapis.com/css?family=Karla');
 
+@import url('/CSS/devildrey33_Indice.css');
+@import url('/CSS/devildrey33_Logo.css');
+
 /* vermell : rgb(234, 80, 78);*/
 
 html {
@@ -50,13 +53,6 @@ body::after {
 }
 
 body[cargando="true"]::after {
-    content:'';
-    position:fixed;
-    top:0;
-    left:0;
-    right:0;
-    bottom:0;
-    background-color:rgb(41, 39, 44);
     opacity:0.925;
     z-index:99;
 }
@@ -64,12 +60,8 @@ body[cargando="true"]::after {
 
 h1, h2, h3, h4, h5 { font-family : 'Karla', sans-serif; }
 
+/* Div principal donde se cargarán los contenidos */
 #Cuerpo {
-    display:flex;
-    flex-wrap:wrap;
-    flex-direction:row;
-    justify-content:flex-start;
-    align-items:stretch;    
     width:calc(100% - 3.6rem);
     transition:0.4s;
     opacity:0.0;
@@ -81,315 +73,7 @@ h1, h2, h3, h4, h5 { font-family : 'Karla', sans-serif; }
     opacity:1.0;
 }
 
-#Cuerpo > .Entrada {
-    position:relative;
-    flex:1 1 800px;
-    padding:0 1rem;
-    /*margin:0.5rem;    */
-    overflow: hidden;
-    z-index:3;
-}
-
-
-/* Vista vertical (portrait / vertical) para la gran mayoria de moviles Y tablets  */                             
-@media (orientation:portrait) {
-    #Cuerpo > .Entrada {
-        flex:1 1 auto;
-    }
-}
-/*
-@media (orientation:landscape) {
-    #Cuerpo {
-        flex-direction:row;
-    }
-}*/
-
-/* Imagen de la entrada */
-#Cuerpo > .Entrada > img, #Cuerpo > .Entrada > .FiltroImg  {
-    display:inline;
-    margin:auto;
-    width:250px;
-    height:200px;
-    float:right;
-    position:absolute;
-    right:2rem;
-    top:2rem;
-    transition:0.4s ease-out;
-    border-radius:1rem;
-}
-
-#Cuerpo > .Entrada > img {
-    z-index:9;
-}
-
-#Cuerpo > .Entrada > .FiltroImg {
-    opacity:1;
-    background-color:rgba(0, 0, 0, 0.6);
-    z-index:10;
-}
-
-#Cuerpo > .Entrada:hover > .FiltroImg {
-    right:3rem;
-    opacity:0.0;
-}
-
-#Cuerpo > .Entrada:hover > img {
-    right:3rem;
-}
-
-/* Marco con el titulo y la descripción */
-#Cuerpo > .Entrada > .Entrada_Descripcion {
-    position:relative;
-    display:inline-table;
-    height:200px;
-    width:calc((100% - 4rem) - 300px);
-    padding:2rem 0.1rem;
-    transition:0.4s ease-in-out;
-    color:#FFFFFF;
-}
-
-/*#Cuerpo > .Entrada:hover > .Entrada_Descripcion {
-    padding-left:3.5rem;
-}*/
-
-/* Título de la entrada */
-#Cuerpo > .Entrada > .Entrada_Descripcion > h1 {
-    color:#FFFFFF;
-    transition:0.4s ease-out;
-    margin:0;
-}
-
-#Cuerpo > .Entrada:hover > .Entrada_Descripcion > h1 {
-    color:rgb(234, 80, 78);
-    padding-left:1rem;
-}
-
-/* Descripción de la entrada */
-#Cuerpo > .Entrada > .Entrada_Descripcion > p {    
-    position:relative;
-    transition:0.4s ease-out;    
-    width:calc(100% - 1rem);
-    margin:0.75rem;
-    color:#CCC;
-}
-
-#Cuerpo > .Entrada > .Entrada_Descripcion > table {    
-    position:relative;
-    transition:0.4s ease-out;    
-    margin:0.75rem;    
-    color:#CCC;
-}
-
-#Cuerpo > .Entrada:hover > .Entrada_Descripcion > p, #Cuerpo > .Entrada:hover > .Entrada_Descripcion > table {    
-    margin-left:2rem;
-    color:#FFF;
-}
-
-
-/* Marcas */
-#Cuerpo > .Entrada > .Entrada_MarcoIzquierdo::before, 
-#Cuerpo > .Entrada > .Entrada_MarcoIzquierdo::after, 
-#Cuerpo > .Entrada > .Entrada_MarcoDerecho::before, 
-#Cuerpo > .Entrada > .Entrada_MarcoDerecho::after {
-    transition: 0.4s;
-    content: '';
-    position: absolute;
-    width: 1.5rem;
-    height: 1.5rem;
-}
-
-#Cuerpo > .Entrada > .Entrada_MarcoIzquierdo, #Cuerpo > .Entrada > .Entrada_MarcoDerecho {   
-    position: absolute;
-    display:inline-block;
-    top: 0px;
-    width: 10px;
-    height: 100%;
-}
-
-#Cuerpo > .Entrada > .Entrada_MarcoIzquierdo {
-    left: -1px;
-}
-
-#Cuerpo > .Entrada > .Entrada_MarcoDerecho {   
-    right: -1px;
-}
-
-#Cuerpo > .Entrada > .Entrada_MarcoIzquierdo::before {
-    top: 0px;
-    left: 0px;
-    border-top: 3px solid rgba(57, 55, 60, 0.3);
-    border-left: 3px solid rgba(57, 55, 60, 0.3);
-}
-
-#Cuerpo > .Entrada > .Entrada_MarcoIzquierdo::after {
-    left: 0px;
-    bottom: -1px;
-    border-bottom: 3px solid rgba(57, 55, 60, 0.3);
-    border-left: 3px solid rgba(57, 55, 60, 0.3);
-}
-
-#Cuerpo > .Entrada > .Entrada_MarcoDerecho::before {
-    bottom: -1px;
-    right: 0px;
-    border-bottom: 3px solid rgba(57, 55, 60, 0.3);
-    border-right: 3px solid rgba(57, 55, 60, 0.3);
-}
-
-#Cuerpo > .Entrada > .Entrada_MarcoDerecho::after {
-    top: 0px;
-    right: 0px;
-    border-top: 3px solid rgba(57, 55, 60, 0.3);
-    border-right: 3px solid rgba(57, 55, 60, 0.3);
-}
-
-/* hover para las marcas */
-#Cuerpo > .Entrada:hover > .Entrada_MarcoIzquierdo::before { 
-    top:0.5rem;
-    left:0.5rem;
-    border-top:3px solid #666;
-    border-left:3px solid #666;
-}
-#Cuerpo > .Entrada:hover > .Entrada_MarcoIzquierdo::after { 
-    bottom:0.5rem;
-    left:0.5rem;
-    border-bottom:3px solid #666;
-    border-left:3px solid #666;
-}
-
-#Cuerpo > .Entrada:hover > .Entrada_MarcoDerecho::before { 
-    bottom:0.5rem;
-    right:0.5rem;
-    border-bottom:3px solid #666;
-    border-right:3px solid #666;
-}
-
-#Cuerpo > .Entrada:hover > .Entrada_MarcoDerecho::after { 
-    top:0.5rem;
-    right:0.5rem;
-    border-top:3px solid #666;
-    border-right:3px solid #666;
-}
-
-#Cuerpo > .Entrada:hover > .Entrada_MarcoIzquierdo::before, 
-#Cuerpo > .Entrada:hover > .Entrada_MarcoIzquierdo::after,
-#Cuerpo > .Entrada:hover > .Entrada_MarcoDerecho::before, 
-#Cuerpo > .Entrada:hover > .Entrada_MarcoDerecho::after { 
-    width: 3rem;
-    height: 3rem;
-    border-radius:3px;
-}
 
 
 
 
-/* BARRA IZQUIERDA Y LOGO */
-#devildrey33_BarraIzquierda {
-    position:fixed;
-    top:0;
-    left:0rem;
-    width:3.6rem;
-    height:100%;
-    border-right:1px solid #353338;
-    background: #252328;
-    animation:Ani_BarraIzquierda 0.5s ease 0s 1 normal;
-    z-index:100;
-}
-
-@keyframes Ani_BarraIzquierda {
-    0%   { left:-3.6rem; };
-    100% { left:0rem; };
-}
-
-body #devildrey33_Logo {
-    font-family: 'Orbitron', sans-serif;
-    font-size:1.2rem;
-    position:fixed;
-    bottom:7.5rem;
-    left:-3.8rem;
-/*    transition:bottom 0.4s ease-in-out, left 0.4s ease-in-out, transform 0.4s ease-in-out, font-size 0.4s ease-in-out;*/
-    transform:rotateZ(-90deg);
-    z-index:200;
-    font-size:1.2rem;
-    animation:Ani_BarraIzquierdaLogo 0.5s ease 0s 1 normal;
-    width:11rem;
-}
-
-@keyframes Ani_BarraIzquierdaLogo {
-    0%   { left:-7.2rem; };
-    100% { left:-3.8rem; };
-}
-
-
-body[cargando="true"] #devildrey33_Logo {
-    transform:rotateZ(0deg);
-    bottom:calc(50vh - 2rem); 
-    left:calc(50vw - 40vw); 
-    font-size:2.4rem;
-    width:80vw;
-}
-
-
-body[cargando="true"] #devildrey33_Logo > div {
-    animation:Ani_LogoCargando 6s ease-in-out 0s infinite;    
-}
-
-/* 2% del alto para el tamaño de fuente */
-/*@media screen and (orientation: portrait)  {
-    body[cargando="true"] #devildrey33_Logo > div {
-        animation:Ani_LogoCargandoPortrait 6s ease-in-out 0s infinite;    
-    }
-}
-*/
-body #devildrey33_Logo > div {
-    position:relative;
-    display:inline-block;
-    padding-left:0;
-}
-
-body[cargando="true"] #devildrey33_Logo > div {
-    opacity:0.0;
-}
-
-/* el 33 en rojo */
-/*#devildrey33_Logo > div:nth-child(11), #devildrey33_Logo > div:nth-child(12) {  color:rgb(234, 80, 78);  }*/
-
-    
-body #devildrey33_Logo > div:nth-child(1)  {    animation-delay: 0.2s;     }
-body #devildrey33_Logo > div:nth-child(2)  {    animation-delay: 0.4s;     }
-body #devildrey33_Logo > div:nth-child(3)  {    animation-delay: 0.6s;     }
-body #devildrey33_Logo > div:nth-child(4)  {    animation-delay: 0.8s;     }
-body #devildrey33_Logo > div:nth-child(5)  {    animation-delay: 1.0s;     }
-body #devildrey33_Logo > div:nth-child(6)  {    animation-delay: 1.2s;     }
-body #devildrey33_Logo > div:nth-child(7)  {    animation-delay: 1.4s;     }
-body #devildrey33_Logo > div:nth-child(8)  {    animation-delay: 1.6s;     }
-body #devildrey33_Logo > div:nth-child(9)  {    animation-delay: 1.8s;     }
-body #devildrey33_Logo > div:nth-child(10) {    animation-delay: 2.0s;     }
-body #devildrey33_Logo > div:nth-child(11) {    animation-delay: 2.0s;     color:rgb(234, 80, 78);     }
-body #devildrey33_Logo > div:nth-child(12) {    animation-delay: 2.2s;     color:rgb(234, 80, 78);     }
-
-@keyframes Ani_LogoCargando {
-    0% {
-        top:-20vh;
-        left:100%;
-        opacity:0;
-        transform:rotate(90deg);
-    }
-    25% {
-        top:-1vh;
-        transform:rotate(0deg);
-        left:calc(50% - 10rem);
-        opacity:1;
-    }
-    60% {
-        left:calc(50% - 8.9rem);
-        transform:rotate(0deg);
-        opacity:1;
-        top:0vh;
-    }
-    75% {
-        top:40vh;
-        left:0;
-        transform:rotate(-130deg);
-        opacity:0;
-    }
-}
