--- a/CSS/devildrey33.css
+++ b/CSS/devildrey33.css
@@ -20,7 +20,7 @@ html {
     font-size: 100%; /* Conversión para que el rem valga 10 pixeles por defecto en la web */
     font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;    
 }
- 
+h1 { font-size:2rem; }
 
 /* 2% del ancho para el tamaño de fuente */
 @media screen and (orientation: landscape) and (min-resolution: 1.2dppx) {
