--- a/CSS/devildrey33.css
+++ b/CSS/devildrey33.css
@@ -19,7 +19,7 @@
 /* vermell : rgb(234, 80, 78);*/
 
 html {
-    font-size: 100%; /* Conversión para que el rem valga 10 pixeles por defecto en la web */
+    /*font-size: 100%; /* Conversión para que el rem valga 10 pixeles por defecto en la web */
     font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;    
 /*    font-family: 'Anonymous Pro', monospace;*/
 }
@@ -27,12 +27,12 @@ h1 { font-size:1.5rem; }
 
 /* 2% del ancho para el tamaño de fuente */
 @media screen and (orientation: landscape) and (min-resolution: 1.2dppx) {
-    html { font-size: 2vw; } /* viewport width */
+    html { font-size: 2vw !important; } /* viewport width */
 }
 
 /* 2% del alto para el tamaño de fuente */
 @media screen and (orientation: portrait)  {
-    html { font-size: 2vh; }  /* viewport height */
+    html { font-size: 2vh !important; }  /* viewport height */
 }
 
 
